Fix #98: construct typed-HTTP LLM providers via a neutral provider-config seam (#103)
* feat(llm): add neutral provider-config SPI seam (phase 1, additive)

* Migrate all LLM provider factories to neutral provider-config context

* feat(bootstrap): wire LLM clients through the neutral provider-config seam with fail-fast discovery

* feat(starter): emit neutral provider configuration from the Spring Boot adapters

* refactor(llm)!: remove the legacy LlmClientFactory.create(ObjectMapper, configuration) SPI

* Removed asString method as it was not needed, rather use getValue()

* Fixed styling issues picked up during review

---------

Co-authored-by: André Groeneveld <admin@agentforge4j.org>